; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_create_distributed_table.c_EnsureLocalTableEmpty.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_create_distributed_table.c_EnsureLocalTableEmpty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INVALID_TABLE_DEFINITION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"cannot distribute relation \22%s\22\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"Relation \22%s\22 contains data.\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"Empty your table before distributing it.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @EnsureLocalTableEmpty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @EnsureLocalTableEmpty(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i8* @get_rel_name(i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @LocalTableEmpty(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %21, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @ERROR, align 4
  %13 = load i32, i32* @ERRCODE_INVALID_TABLE_DEFINITION, align 4
  %14 = call i32 @errcode(i32 %13)
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @errmsg(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %15)
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @errdetail(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = call i32 @errhint(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %12, i32 %19)
  br label %21

21:                                               ; preds = %11, %1
  ret void
}

declare dso_local i8* @get_rel_name(i32) #1

declare dso_local i32 @LocalTableEmpty(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*) #1

declare dso_local i32 @errdetail(i8*, i8*) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
